# Socket_Programming_2

./: .gitignore  README.md
src/client-Qt/client-side/: CMakeLists.txt  main.cpp  udpsocketmanager.cpp  udpsocketmanager.h
src/server/: CMakeLists.txt
src/server/include/: server.h  serverThread.h
src/server/resources/: openssl.cnf  server-1.json  server-2.json  server-test.json  server.crt  server.key
src/server/src/: main.cpp  server.cpp  server.h  serverThread.cpp  uncrustify.cfg
src/server/test/: ssl_client  test-1.cpp  test-2-SSL.cpp  test-3-SendJson.cpp  test-4-Broadcast.cpp  test1.cpp  test2  test2-SSL.cpp  test2Newssl
src/unfinished-code/: CMakeLists.txt
src/unfinished-code/broadcast/test/: client.cpp  server.cpp
src/unfinished-code/server-cpp/: CMakeLists.txt  a.out  main.cpp  server.cpp  server.h  serverThread.cpp  serverThread.h
src/unfinished-code/server-cpp/resources/: data.json
src/unfinished-code/server-cpp/src/: server.cpp  server.h  serverThread.cpp  serverThread.h
src/unfinished-code/tmp/: client.cpp  server.cpp
src/unfinished_code/: CMakeLists.txt
src/unfinished_code/src/: client.cpp
